
syntax = "proto3";


option java_multiple_files = true;
option java_package = "io.github.hundanli.grpc.greeter";
option java_outer_classname = "GreeterProto";
option objc_class_prefix = "GTR";

service GreeterService {
  rpc sayHello(GreeterRequest) returns (GreeterReply) {}
}

message GreeterRequest {
  string name = 1;
}

message GreeterReply {
  string message = 1;
}

